[gd_scene load_steps=2 format=2]

[ext_resource path="res://Boxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HitPosition" type="Position2D" parent="."]

[node name="InviTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="InviTimer" to="." method="_on_InviTimer_timeout"]
